# rca-agent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
demo/: Dockerfile  docker-compose.yml
demo/dags/: demo_oom_failure.py  demo_schema_break.py
demo/data/chroma/: chroma.sqlite3
docs/source/: api-reference.md  conf.py  configuration.md  custom-collectors.md  getting-started.md  index.md  usage.md
src/rca_agent/: __init__.py  cli.py  main.py
src/rca_agent/actions/: __init__.py  file_writer.py  formatters.py  slack.py
src/rca_agent/agent/: __init__.py  graph.py  nodes.py  state.py
src/rca_agent/analyzers/: __init__.py  llm_analyzer.py  pattern_matcher.py
src/rca_agent/api/: __init__.py  webhook.py
src/rca_agent/collectors/: __init__.py  airflow.py  base.py  git.py  source_health.py
src/rca_agent/knowledge/: __init__.py  incident_store.py
src/rca_agent/models/: __init__.py  context.py  events.py  reports.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_formatters.py  test_models.py  test_pattern_matcher.py
